fixing whitespace issue between header and content area

--- a/htdocs/themes/custom/si_nestwatch/sass/layouts/_00-layout.scss
+++ b/htdocs/themes/custom/si_nestwatch/sass/layouts/_00-layout.scss
@@ -13,6 +13,9 @@
   width: 100%;
   padding: 0;
 }
+.node--type-page .main-content {
+  padding-top: 0;
+}
 
 .container .container,
 .container .layout-constrain > .content,
